--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,7 @@
         "@php artisan config:clear",
         "@php artisan optimize",
         "@php artisan migrate --force",
-        "chmod -R 777 public/"
+        "chmod -R 777 public/",
+        "chmod -R 777 storage/"
     ]
 }
