--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "@php artisan optimize",
         "@php artisan migrate --force",
         "chmod -R 777 public/",
-        "chmod -R 777 storage/"
+        "chmod -R 777 storage",
+        "php artisan passport:keys"
     ]
 }
