--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,17 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "@php artisan clear-compiled",
+            "@php artisan cache:clear",
+            "@php artisan config:clear",
+            "@php artisan optimize",
+            "@php artisan migrate --force",
+            "chmod -R 777 public/",
+            "chmod -R 777 app/",
+            "chmod -R 777 storage",
+            "@php artisan passport:keys"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
@@ -61,16 +72,5 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "post-install-cmd": [
-        "@php artisan clear-compiled",
-        "@php artisan cache:clear",
-        "@php artisan config:clear",
-        "@php artisan optimize",
-        "@php artisan migrate --force",
-        "chmod -R 777 public/",
-        "chmod -R 777 app/",
-        "chmod -R 777 storage",
-        "php artisan passport:keys"
-    ]
+    "prefer-stable": true
 }
