--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "phpunit/phpunit": "^9.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
